Update username font to 'Cooper Black' and apply italic style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,8 @@
         }
 
         .username {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Cooper Black', 'Comic Sans MS', cursive, sans-serif;
+            font-style: italic;
             font-size: 5vh;
             color: white;
             text-shadow: 0 0 1vw #00ff00, 0 0 2vw #00ff00;
