feat(messages): mp3 audio files support on livechat

--- a/public/styles.css
+++ b/public/styles.css
@@ -127,3 +127,11 @@ video.attachment {
 video.attachment::-webkit-media-controls {
     display: none;
 }
+
+audio.attachment {
+    display: none;
+}
+
+audio.attachment::-webkit-media-controls {
+    display: none;
+}
