--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,12 @@
         socket.addEventListener('message', (event) => {
             const messageData = JSON.parse(event.data);
 
+            if (messageData.action === 'stop') {
+                messagesContainer.innerHTML = '';
+                console.log('stop');
+                return
+            }
+
             const messageElement = document.createElement('div');
             messageElement.className = 'message';
             messageElement.style.display = 'none';
